--- a/src/pages/aura.astro
+++ b/src/pages/aura.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import AuraNavbar from '../components/AuraNavbar';
-import auraLogo from '../../public/images/logos/Aura-Logo.webp';
+import auraLogo from '/images/logos/Aura-Logo.webp';
 
 // Definimos los colores de AURA como constantes
 const AURA_COLORS = {
