--- a/src/pages/aura.astro
+++ b/src/pages/aura.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import AuraNavbar from '../components/AuraNavbar';
 import { Image } from 'astro:assets';
-import auraLogo from '../assets/images/logos/Aura-Logo.webp';
+import auraLogo from '@assets/images/logos/Aura-Logo.webp';
 
 // Definimos los colores de AURA como constantes
 const AURA_COLORS = {
