--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ const { title } = Astro.props;
 		<title>{title}</title>
 		<meta name="view-transition" content="same-origin" />
 	</head>
-	<body class="antialiased">
+	<body class="antialiased bg-gray-50">
 		<div class="page-content">
 			<slot />
 		</div>
